// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar Snapshot testing - Should render loader 1`] = `
<div>
   
  <header>
    <nav
      class="navbar"
    >
      <a
        class="navbar__title"
        data-testid="podcaster"
        href="/"
      >
         Podcaster
      </a>
      <div
        class="navbar__loader"
        data-testid="loader"
      >
         
        <div
          class="loader"
        />
         
      </div>
    </nav>
  </header>
   
</div>
`;

exports[`Navbar Snapshot testing - Should render podcaster 1`] = `
<div>
  <header>
    <nav
      class="navbar"
    >
      <a
        class="navbar__title"
        data-testid="podcaster"
        href="/"
      >
         Podcaster
      </a>
    </nav>
  </header>
</div>
`;
